--- a/pages/blog/index.module.css
+++ b/pages/blog/index.module.css
@@ -1,4 +1,11 @@
 
 .blog{
     border: 1px solid black;
+    margin: 10px;
+    padding: 10px;
+}
+
+.blog:hover {
+    background-color: rgba(0 255 200 / 10%);
+    cursor: pointer;
 }
